tests/0038-property-set-evaluation-order.src.err
tests/0038-property-set-evaluation-order.src:1
ERROR: undefined variable 'undefined1'
 | undefined1.bar = undefined2;
   ^
